force-app/main/default/objects/Field_Stage_Config__c/Field_Stage_Config__c.object-meta.xml
<CustomObject>
    <label>Field Stage Config</label>
    <pluralLabel>Field Stage Configs</pluralLabel>
    <nameField>
        <label>Name</label>
        <type>AutoNumber</type>
        <displayFormat>FSC-{0000}</displayFormat>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>