force-app/main/default/objects/Field_Stage_Config__c/fields/Field_Mapping__c.field-meta.xml
<CustomField>
    <fullName>Field_Mapping__c</fullName>
    <label>Field Mapping</label>
    <type>MasterDetail</type>
    <referenceTo>Custom_Field_Mapping__c</referenceTo>
    <relationshipLabel>Field Stage Configs</relationshipLabel>
    <relationshipName>Field_Stage_Configs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
</CustomField>