force-app/main/default/objects/Field_Stage_Config__c/fields/Stage_Value__c.field-meta.xml
<CustomField>
    <fullName>Stage_Value__c</fullName>
    <label>Stage Value</label>
    <type>Text</type>
    <length>255</length>
    <inlineHelpText>Exact picklist value</inlineHelpText>
</CustomField>